Fixes align

--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -88,6 +88,11 @@
     ul,
     ol {
         margin-left: 2.1rem;
+
+        img {
+            display: inline-block;
+            vertical-align: middle;
+        }
     }
 
     ul {
